# StandRemoteUI

./: .gitignore  README.md  TODO  build.bat  gui.py  make_bundle.ps1  update_standcontrol.ps1  ws_can_log.jsonl
client/: app.py  build.bat  controllers.py  gui.py  gui_ws.py  logbook_20251225_155030.csv  network.py  state.py  telemetry.py  test.py  ui_style.py  utils.py  view.py
docs/: StandControl.tex  Анкета_по_программам_для_ЭВМ_и_базам_данных.docx  Исходный_код_программы_StandControl.docx  Исходный_код_программы_StandControl_клиент.docx  Исходный_код_программы_StandControl_сервер.docx  Реферат.docx
server/: CMakeLists.txt  MarathonControl.spec  Py6Side.py  build.ps1  build_ninja.ps1  builder.py  main.ui  ui_main.py  ui_mock.py  ui_modern.py  ui_modern.spec  ws_can_log.jsonl  ws_server.cpp
server/Stand_Marathon/: CMakeLists.txt
server/Stand_Marathon/Include/: PCANBasic.pas  PCANBasic.vb  ScAPI.h
server/Stand_Marathon/Include/CAN_DBC_MODULE/: CANDBCUtils.c  CANDBCUtils.h  CANErrorsHandlers.c  CANErrorsHandlers.h  CANReceiveDispatcher.h  CANSendDispatcher.h  CANSignalsMap.c  CANSignalsMap.h  CANdbcDriver.h  CMakeLists.txt  DbcDispatcher.cpp  DbcDispatcher.h  DbcDispatcher.hpp  canDBCtask.c  canDBCtask.h  defaultStructures.h
server/Stand_Marathon/Include/CAN_DBC_MODULE/DBC_MSG/: IMsg.hpp
server/Stand_Marathon/config/: Config.ini
server/Stand_Marathon/lib/: ScAPI.lib  ScAPI64.lib
server/Stand_Marathon/src/: CANInterface.cpp  CANInterface.h  CommandSender.cpp  CommandSender.h  ConfigManager.cpp  ConfigManager.h  DataModel.h  MarathonLogic.cpp  MarathonLogic.h  StateMachine.cpp  StateMachine.h  YokogawaDL850E.cpp  YokogawaDL850E.h  main.cpp
